Fixed alignments We quadrupled this.
Alignments were slightly out. Now they have been fixed.

--- a/ProjectConway/projectconway/static/css/projectConway.css
+++ b/ProjectConway/projectconway/static/css/projectConway.css
@@ -88,23 +88,20 @@ body {
     background-color: #0E7805;
     color: #FFFFFF;
     text-align: justify;
+    padding: 2%;
 }
 #tutorial_title {
-    text-align: center;
     padding: 1%;
 }
 #image_spacing {
     margin-left: 10%;
+    padding-bottom: 10%;
 }
 #button_left {
     text-align: left;
 }
 #button_right {
     text-align: right;
-}
-#tutorial_text {
-    padding-right: 5%;
-    padding-left: 5%;
 }
 
 #mobile_button{
